--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -10,4 +10,8 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 
+saltedge.app-id=${SALTEDGE_ID}
+saltedge.secret=${SALTEDGE_SECRET}
+
 jwt.secret=${JWT_SECRET}
+internal.key=${INTERNAL_KEY}
