--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.application.name=api-gateway
-spring.config.import=file:environment.properties
-server.port=8082
-
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-
-jwt.secret=${JWT_SECRET}
+spring.profiles.active=dev
