--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-spring.application.name=authentication-service
-spring.config.import=file:environment.properties
-server.port=8081
-
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-
-jwt.secret=${JWT_SECRET}
-internal.key=${INTERNAL_KEY}
+spring.profiles.active=dev
