--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -1,17 +1,1 @@
-spring.application.name=transaction-service
-spring.config.import=file:environment.properties
-server.port=8083
-
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-
-spring.datasource.url=jdbc:mysql://localhost:3306/transactionservice
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
-
-saltedge.app-id=${SALTEDGE_ID}
-saltedge.secret=${SALTEDGE_SECRET}
-
-jwt.secret=${JWT_SECRET}
-internal.key=${INTERNAL_KEY}
+spring.profiles.active=dev
